<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Happycalculations</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
  <string name="sum">Суммирование</string>
  <string name="multiply">Умножение</string>
  <string name="division">Деление</string>
  <string name="power">Возведение в степень</string>
  <string name="equals">=</string>
  <string name="checkResult">Проверить</string>
  <string name="banner_ad_unit_id">ca-app-pub-4239266606720505/8811496473</string>
  <string name="start">Start</string>
  <string name="zero">00s</string>
  <string name="com.onedeveloperstudio.happycalculations.preference_key">ca-app-pub-4239266606720505/8811496473</string>
  <string name="highscores">Лучшие результаты</string>
  <string name="drop">Сбросить</string>
</resources>
