<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MenuActivity">
  <LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">
    <Button android:id="@+id/plus"
            android:text="@string/sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button android:id="@+id/multiply"
            android:text="@string/multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button android:id="@+id/division"
            android:text="@string/division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button android:id="@+id/power"
            android:text="@string/power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
  </LinearLayout>
</RelativeLayout>
