<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/timechanger"
      android:text="@string/zero"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@color/green"
      android:layout_weight="0.5"
      android:gravity="center_horizontal"
      android:textSize="@dimen/textview_font_size"/>
    <Button
      android:id="@+id/startbutton"
      android:text="@string/start"
      android:layout_weight="0.5"
      android:layout_width="0dp"
      android:background="@color/yellow"
      android:layout_height="wrap_content"
      android:textSize="@dimen/textview_font_size"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/first"
      android:layout_width="@dimen/numbers_width"
      android:layout_height="wrap_content"
      android:background="@color/red"
      android:gravity="center_horizontal"
      android:textSize="@dimen/textview_font_size"/>

    <TextView
      android:id="@+id/operator"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:textSize="@dimen/textview_font_size"/>

    <TextView
      android:id="@+id/second"
      android:layout_width="@dimen/numbers_width"
      android:layout_height="wrap_content"
      android:background="@color/red"
      android:gravity="center_horizontal"
      android:textSize="@dimen/textview_font_size"/>
  </LinearLayout>

  <EditText
    android:id="@+id/result"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="0"
    android:inputType="number"/>

  <Button
    android:id="@+id/checkButton"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/checkResult"/>
</LinearLayout>